Fixed text animation on iOS

--- a/assets/scss/_animations.scss
+++ b/assets/scss/_animations.scss
@@ -91,7 +91,7 @@ $nav-bg: #000;
 
 @keyframes slide-up {
     0% {
-        transform: translateY(100px);
+        transform: translateY(250px);
     }
     100% {
         transform: translateY(0);
@@ -99,6 +99,6 @@ $nav-bg: #000;
 }
 
 .slide-up {
-    animation: slide-up 0.75s cubic-bezier(0.65, 0, 0.35, 1) both
+    animation: slide-up 1s cubic-bezier(0.65, 0, 0.35, 1) both
 }
 
